traefik.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec: 
      restartPolicy: Always
      containers:
      - name: traefik
        image: traefik:1.7
        ports:
        - name: http 
          containerPort: 80
        - name: admin 
          containerPort: 8080
        args: ["api", "--kubernetes", "--loglevel=INFO",]
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - epitech-s4ql
                - epitech-s4qe
