postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 5432
      targetPort: 5432
  selector:
   app: postgres
