redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    ports:
      - port: 6379
        targetPort: 6379
  selector:
   app: redis
