traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      targetPort: 80
      nodePort: 30021
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30042
  selector:
    app: traefik
